# ecsvulk

./: .gitignore  Cargo.toml  README.md
Game/: config.toml  log.txt
discord-rpc/: README.md
discord-rpc/src/connection/: base.rs  manager.rs
shaders/: main.frag  main.vert  normal.frag  normal.vert  terrain.frag  terrain.vert
src/: config.rs  discordrpc.rs  helper.rs  keycode.rs  logger.rs  main.rs  obj_loader.rs  objects.rs  renderer.rs
src/config/: configgen.rs  configloader.rs  keycode.rs  mod.rs
src/ecs/: components.rs  entities.rs  mod.rs
src/graphics/: mod.rs  pipeline.rs  renderer.rs
